@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-29T08:26:54Z",
-  "count_outdated" : 894,
-  "uniques_outdated" : 470,
-  "count" : 919,
-  "uniques" : 484,
+  "timestamp" : "2022-11-29T16:29:48Z",
+  "count_outdated" : 898,
+  "uniques_outdated" : 472,
+  "count" : 922,
+  "uniques" : 485,
   "clones" : [
-    {
-      "timestamp": "2022-11-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-11-16T00:00:00Z",
       "count": 3,
