@@ -1,12 +1,7 @@
 {
-  "count": 25,
+  "count": 24,
   "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2022-11-15T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-11-16T00:00:00Z",
       "count": 3,
